# dede_sim1

./: README.md  events.jsonl  events_top100.jsonl  pyproject.toml
src/: splash_sim.py  synth_from_events.py
src/dede_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
