[project]
name = "dede-sim"
version = "0.1.0"
description = "Hybrid shallow-water + droplet event generator for splash pitch estimation"
authors = [{ name = "User" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12"
    "taichi>=1.7.3"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
